# orchestra-mcp

./: API_CONFORMANCE.md  README.md  needs_fixing.yml  pyproject.toml  server.json
.github/workflows/: api_conformance.yml  ci.yml  deploy_lambda.yml  lint_and_test.yml  publish_mcp_registry.yml
orchestramcp/: __init__.py  __main__.py  api_contract.py  auth.py  client.py  errors.py  in_process_request_handler.py  lambda_handler.py  models.py  server.py  server_lambda.py
scripts/: check_api_conformance.py  scaffold_tool.py
tests/: conftest.py  test_api_conformance.py  test_auth.py  test_client.py  test_in_process_request_handler.py  test_lambda_handler.py  test_metadata.py  test_server.py  test_tools.py
