[project]
name = "orchestramcp"
version = "0.1.0"
description = "Model Context Protocol server for Orchestra API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.9.0,<3", "httpx>=0.27.0", "pydantic>=2.0.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
]
lambda = [
    "mcp>=1.20.0 ; python_full_version >= '3.11'",
    "run-mcp-servers-with-aws-lambda>=0.4.8,<0.5.0 ; python_full_version >= '3.11'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
