[project]
name = "orchestramcp"
version = "0.1.0"
description = "Model Context Protocol server for Orchestra API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.3.1,<4",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
orchestramcp = "orchestramcp.__main__:main"

[project.urls]
Homepage = "https://www.getorchestra.io"
Repository = "https://github.com/orchestra-hq/orchestra-mcp"
Documentation = "https://docs.getorchestra.io/docs/api/"

[project.optional-dependencies]
lambda = [
    "mcp>=1.20.0",
    "run-mcp-servers-with-aws-lambda>=0.4.8,<0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.8.0",
    "orchestramcp[lambda]",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
